--- a/src/app/pages/public/settings/profile/profile.page.html
+++ b/src/app/pages/public/settings/profile/profile.page.html
@@ -28,7 +28,7 @@
                         <tr class="trspace">
                           <td  style="width:30%"><span><img src="assets/address.png" /></span> </td>
                           <td><span class="point18" style="display:block">{{user.address1 +" "+user.address2}} </span>
-                            <span class="point18" style="display:block">{{user.city+" "+user.zip+" "+user.country}}</span>
+                            <span class="point18" style="display:block">{{user.city+" "+user.state+" "+user.zip+" "+user.country}}</span>
                         </td>
                         </tr>
                       </table>
