--- a/src/app/pages/public/transactions/transactions.page.html
+++ b/src/app/pages/public/transactions/transactions.page.html
@@ -46,7 +46,8 @@
                         <span class="span2">Reference Code: {{val.transactionReferenceCode}}</span>
                     </div>
                     <div style="width:8%">
-                        <img src="assets/us.png" alt="" align="middle" height="25" width="25" style="margin-right: 10px;">
+                        <img src="assets/us.png" *ngIf="val.receiverCountry === 'USA'" alt="" align="middle" height="25" width="25" style="margin-right: 10px;">
+                        <img src="assets/mexico.png" *ngIf="val.receiverCountry === 'Mexico'"  alt="" align="middle" height="25" width="25" style="margin-right: 10px;">
                     </div>
                     <div style="margin-left: 10px;width:20%">
                         <span class="amount"><b>$</b> {{val.transactionTotalAmount}}</span>
