--- a/src/app/pages/public/sendmoney/sendmoney.page.html
+++ b/src/app/pages/public/sendmoney/sendmoney.page.html
@@ -207,7 +207,7 @@
                                 <span class="tdLabel"> Routing Number</span>
                             </td>
                             <td style="width:55%">
-                                <input type="text" class="form-control" autocomplete="off" name="deliveryBankRoutingNumber" maxlength="18" pattern="[0-9 ]+"
+                                <input type="text" class="form-control" autocomplete="off" name="deliveryBankRoutingNumber" maxlength="18" pattern="[A-Za-z0-9 ]+"
                                     placeholder="" required [ngClass]="{'is-invalid': 
                                     deliveryBankRoutingNumber.invalid  && submitted  ,'is-valid': deliveryBankRoutingNumber.valid  && submitted }"
                                     #deliveryBankRoutingNumber="ngModel" ngModel [(ngModel)]="sendMoney.deliveryBankRoutingNumber" style="text-indent: 10px;font-size: 15.00px;font-weight: 400;font-style: normal;font-family: raleway_regular, Arial;border-right:0.5px solid #3C3C3C;border-left:0.5px solid #3C3C3C;border-top:0.5px solid #3C3C3C;border-radius: 10px;width: 95%;height: calc(1.4em +0.75rem);border-bottom:0.5px solid #3C3C3C !important">
