--- a/src/app/pages/public/transactions/transactions.page.html
+++ b/src/app/pages/public/transactions/transactions.page.html
@@ -199,7 +199,7 @@
                         <span class="tdDataConf">  {{sendMoneyObj.receiverName}}</span>
                     </td>
                     <td >
-                        <span class="tdDataConf" *ngIf="sendMoneyObj.receiverCountry =='USA'">  <img src="assets/united-states-1.png" style="margin: -2px;"></span>
+                        <span class="tdDataConf" *ngIf="sendMoneyObj.receiverCountry =='USA'">  <img src="assets/us.png" style="margin: -2px;"></span>
                         <span class="tdDataConf" *ngIf="sendMoneyObj.receiverCountry =='Mexico'">  <img src="assets/mexico.png" style="margin: -2px;"></span>
                     </td>
                 </tr>
