--- a/src/app/pages/public/transactions/transactions.page.html
+++ b/src/app/pages/public/transactions/transactions.page.html
@@ -177,7 +177,7 @@
         <!-- <div class="columnHome"></div> -->
     </div>
     <div class="columnHome"  [hidden]="!confirmation">
-                <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;padding-top: 3px;" (click)="transactions()">
+                <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;" (click)="transactions()">
                     &nbsp;
                     Transaction Details</p>
             <div style="text-align: -webkit-center;">
