--- a/src/app/pages/public/sendmoney/sendmoney.page.html
+++ b/src/app/pages/public/sendmoney/sendmoney.page.html
@@ -240,8 +240,9 @@
                                                 transactionAmount.invalid  && submitted  ,'is-valid': transactionAmount.valid  && submitted }"
                                                 #transactionAmount="ngModel" ngModel [(ngModel)]="sendMoney.transactionAmount" (ngModelChange)="onChangeSend($event)"   style="text-indent: 10px;font-size: 15.00px;font-weight: 400;font-style: normal;font-family: raleway_regular, Arial;border-right:0.5px solid #3C3C3C;border-left:0.5px solid #3C3C3C;border-top:0.5px solid #3C3C3C;
                                                     border-radius: 10px;width: 60%;height: calc(1.4em +0.75rem);border-bottom:0.5px solid #3C3C3C !important">
-                                            <button class="sendmoneyBtn">&nbsp;<img src="assets/united-states-1.png" style="margin: -2px;">&nbsp;
-                                                <span class="usd">USD</span></button>
+                                            <button class="sendmoneyBtn">&nbsp;<img src="assets/united-states-1.png" height="20"   width="25" class="imgAlign">&nbsp;
+                                                <span class="usd">USD</span>
+                                            </button>
                                         </td>
                                     </tr>
                                     <tr>
@@ -312,7 +313,7 @@
                                                 totalAmountSentToReceiver.invalid  && submitted  ,'is-valid': totalAmountSentToReceiver.valid  && submitted }"
                                                 #totalAmountSentToReceiver="ngModel" disabled ngModel [(ngModel)]="sendMoney.totalAmountSentToReceiver" style="text-indent: 10px;font-size: 15.00px;font-weight: 400;font-style: normal;font-family: raleway_regular, Arial;border-right:0.5px solid #3C3C3C;border-left:0.5px solid #3C3C3C;border-top:0.5px solid #3C3C3C;
                                                                                         border-radius: 10px;width: 60%;height: calc(1.4em +0.75rem);border-bottom:0.5px solid #3C3C3C !important">
-                                            <button class="sendmoneyBtn1">&nbsp;<img src="assets/united-states-1.png" id="receiverImg" style="margin: -2px;">&nbsp;
+                                            <button class="sendmoneyBtn1">&nbsp;<img src="assets/united-states-1.png" id="receiverImg" height="20"   width="25" class="imgAlign">&nbsp;
                                                 <span class="usd" *ngIf="!sendMoney.receiverCountry" >MXN</span>
                                                 <span class="usd" *ngIf="sendMoney.receiverCountry =='Mexico'" >MXN</span>
                                                 <span class="usd"  *ngIf="sendMoney.receiverCountry =='USA'">USD</span>
